--- a/pom.xml
+++ b/pom.xml
@@ -124,5 +124,16 @@
             </snapshots>
         </repository>
     </repositories>
-
+         
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <url>http://10.0.0.201:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://10.0.0.201:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+         
 </project>
