--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,6 +2,6 @@ stages:
 - name: Build
   steps:
   - runScriptConfig:
-      image: maven:3-jdk-8
+      image: maven:3.6.0-jdk-8-alpine
       shellScript: mvn deploy:deploy-file
 notification: {}
