--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -4,4 +4,12 @@ stages:
   - runScriptConfig:
       image: maven:3.6.0-jdk-8-alpine
       shellScript: mvn deploy:deploy-file
+- name: Publish
+  steps:
+  - publishImageConfig:
+      dockerfilePath: ./Dockerfile
+      buildContext: .
+      tag: suite-cloud/suite-cloud-parent
+      pushRemote: true
+      registry: 127.0.0.1:34709
 notification: {}
