--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,7 +2,7 @@ stages:
 - name: Build
   steps:
   - runScriptConfig:
-      image: 10.0.0.203:5000/suite-cloud/suite-cloud-maven
+      image: 10.0.0.203:5000/suite-cloud-maven
       shellScript: mvn deploy:deploy-file
     env:
       PLUGIN_DEBUG: "true"
@@ -12,7 +12,7 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: suite-cloud/suite-cloud-parent
+      tag: suite-cloud-parent
       pushRemote: true
       registry: 10.0.0.203:5000
     env:
